[package]
name = "cheatbook016"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0" }
# bevy = { git = "https://github.com/bevyengine/bevy" }
async-channel = "2.3"
image = "0.25"
winit = "0.30"

[dev-dependencies]
image = "0.25"
winit = "0.30"

# [[bin]]
# name = "input-char"
# path = "src/input/char.rs"
